v0.505:
  - refactored logging instance
  - added Exception WorldsAutoloadException (there was an error in xml config!)
  - added Exception WorldsConfigurationException (this will throw an error if something went wrong during shutdown)

v0.5 :
  - fixes for #953 compatibility

v0.4 2011.04.24 09:20 PST:
- Initial sticky chunk support. We allow plugins to register chunks that do not unload. When the chunk is no longer
  sticky, we schedule it for unloading. We properly catch and cancel the required chunk unload events.

- Added support for player protections on a world by world basis. Drowning, burning, lava swiming, lightning strikes,
  falling damage, and all player damage. Controlled via the wxw modify and wxw create commands.

- Added support for world protections on a world by world basis. Fire spread, lava spread, water spread, lightning fire, 
  and lava fire. Controlled via the wxw modify and wxw create commands.
  
- Updated wxw info ... to be more useful. Colorized it.

- Updated help output for wxw modify and wxw create to be slightly more useful.

- Fixed typo in config loader for Neutral monster disable. 


v0.3 2011.04.21 02:17 PST:

- Added scheduler capabilities.

- Enabled after enable world entity removal via scheduler.

- Added timelock. Uses scheduler. Now users can lock their worlds to day or night. Defaults to no timelock enabled. 

- Added config.xml option to disable timelock and its scheduler. Defaults to scheduler enabled.


v0.2.1 2011.04.20 04:38 PST:

- World specific PvP controls. True or false. 

- Updated safe spawn code for normal worlds to only use highest y if spawn is covered. This allows indoor spawn locations. 
  Also now retain player pitch and yaw on spawn or go.
  
- Updated the find safe spawn location code to be modular. Can be used for more than just finding initial spawn locations now, with small enough xyz numbers ;)
